--- a/refs.bib
+++ b/refs.bib
@@ -1,202 +1,91 @@
-@article{brighton05,
-title = {Language as an evolutionary system},
-journal = {Physics of Life Reviews},
-volume = {2},
-number = {3},
-pages = {177-226},
-year = {2005},
-issn = {1571-0645},
-doi = {https://doi.org/10.1016/j.plrev.2005.06.001},
-url = {https://www.sciencedirect.com/science/article/pii/S1571064505000229},
-author = {Henry Brighton and Kenny Smith and Simon Kirby},
-keywords = {Language, Evolution, Artificial life, Culture, Adaptation, Replication}
+@article{Hassan2021,
+  doi = {10.14763/2021.2.1556},
+  url = {https://doi.org/10.14763/2021.2.1556},
+  year = {2021},
+  month = apr,
+  publisher = {Internet Policy Review,  Alexander von Humboldt Institute for Internet and Society},
+  volume = {10},
+  number = {2},
+  author = {Samer Hassan and Primavera De Filippi},
+  title = {Decentralized Autonomous Organization},
+  journal = {Internet Policy Review}
 }
 
-@article{carr17,
-author={Carr, Jon W.
-and Smith, Kenny
-and Cornish, Hannah
-and Kirby, Simon},
-title={The Cultural Evolution of Structured Languages in an Open-Ended, Continuous World},
-journal={Cognitive science},
-year={2017},
-month={May},
-edition={2016/04/07},
-publisher={John Wiley and Sons Inc.},
-volume={41},
-number={4},
-pages={892-923},
-keywords={Categorization; Communication; Compositionality; Cultural evolution; Iterated learning; Language evolution; Sound symbolism; Adult; *Cultural Evolution; Female; Humans; *Language; Learning/*physiology; Male; Models, Theoretical; Speech/*physiology; Young Adult},
-abstract={Language maps signals onto meanings through the use of two distinct types of structure. First, the space of meanings is discretized into categories that are shared by all users of the language. Second, the signals employed by the language are compositional: The meaning of the whole is a function of its parts and the way in which those parts are combined. In three iterated learning experiments using a vast, continuous, open-ended meaning space, we explore the conditions under which both structured categories and structured signals emerge ex nihilo. While previous experiments have been limited to either categorical structure in meanings or compositional structure in signals, these experiments demonstrate that when the meaning space lacks clear preexisting boundaries, more subtle morphological structure that lacks straightforward compositionality-as found in natural languages-may evolve as a solution to joint pressures from learning and communication.},
-note={27061857[pmid]},
-note={PMC5484388[pmcid]},
-issn={1551-6709},
-doi={10.1111/cogs.12371},
-url={https://pubmed.ncbi.nlm.nih.gov/27061857},
-url={https://doi.org/10.1111/cogs.12371},
-language={eng}
+@article{Dalton1980,
+  doi = {10.2307/257804},
+  url = {https://doi.org/10.2307/257804},
+  year = {1980},
+  month = jan,
+  publisher = {Academy of Management},
+  volume = {5},
+  number = {1},
+  pages = {49},
+  author = {Dan R. Dalton and William D. Todor and Michael J. Spendolini and Gordon J. Fielding and Lyman W. Porter},
+  title = {Organization Structure and Performance: A Critical Review},
+  journal = {The Academy of Management Review}
 }
 
+@BOOK{DLTS,
+title = {Distributed Ledger Technology Systems: A Conceptual Framework},
+author = {Rauchs, Michel and Glidden, Andrew and Gordon, Brian and Pieters, Gina and Recanatini, Martino and Rostand, Francois and Vagneur, Kathryn and Zhang, Bryan},
+year = {2018},
+publisher = {Cambridge Centre for Alternative Finance, Cambridge Judge Business School, University of Cambridge},
+abstract = {The DLT ecosystem is plagued with the use of incomplete and inconsistent definitions and a lack of standardised terminology, creating a needlessly complicated landscape for everyone from experienced policymakers and developers to individuals venturing into the field for the first time. This study sets out to contribute to international discussions to create a shared, common language around DLT systems to clarify terminology and concepts.},
+keywords = {Alternative finance; Blockchain; Distributed Ledger Technology; DLT; Bitcoin; Cryptocurrency; Framework; Conceptual},
+url = {https://EconPapers.repec.org/RePEc:jbs:altfin:201810-dlts}
+}
 
-@book{hebb49,
-  added-at = {2011-06-02T00:21:57.000+0200},
-  address = {New York},
-  author = {Hebb, Donald O.},
-  biburl = {https://www.bibsonomy.org/bibtex/26432ae617e6db0127c8b197bf760d99e/mhwombat},
-  citeulike-article-id = {500649},
-  citeulike-linkout-0 = {http://www.amazon.ca/exec/obidos/redirect?tag=citeulike09-20\&amp;path=ASIN/0805843000},
-  citeulike-linkout-1 = {http://www.amazon.de/exec/obidos/redirect?tag=citeulike01-21\&amp;path=ASIN/0805843000},
-  citeulike-linkout-2 = {http://www.amazon.fr/exec/obidos/redirect?tag=citeulike06-21\&amp;path=ASIN/0805843000},
-  citeulike-linkout-3 = {http://www.amazon.jp/exec/obidos/ASIN/0805843000},
-  citeulike-linkout-4 = {http://www.amazon.co.uk/exec/obidos/ASIN/0805843000/citeulike00-21},
-  citeulike-linkout-5 = {http://www.amazon.com/exec/obidos/redirect?tag=citeulike07-20\&path=ASIN/0805843000},
-  citeulike-linkout-6 = {http://www.worldcat.org/isbn/0805843000},
-  citeulike-linkout-7 = {http://books.google.com/books?vid=ISBN0805843000},
-  citeulike-linkout-8 = {http://www.amazon.com/gp/search?keywords=0805843000\&index=books\&linkCode=qs},
-  citeulike-linkout-9 = {http://www.librarything.com/isbn/0805843000},
-  day = 15,
-  file = {:neural_nets/Hebb 1949.pdf:PDF},
-  groups = {public},
-  howpublished = {Hardcover},
-  interhash = {ba8f8b92a0de2c83bdbcc9d742235a59},
-  intrahash = {6432ae617e6db0127c8b197bf760d99e},
-  isbn = {0-8058-4300-0},
-  keywords = {MSc checked network neural seminal},
-  month = jun,
-  posted-at = {2006-02-10 16:35:34},
-  priority = {2},
+@article{Sai2021,
+  doi = {10.1016/j.ipm.2021.102584},
+  url = {https://doi.org/10.1016/j.ipm.2021.102584},
+  year = {2021},
+  month = jul,
+  publisher = {Elsevier {BV}},
+  volume = {58},
+  number = {4},
+  pages = {102584},
+  author = {Ashish Rajendra Sai and Jim Buckley and Brian Fitzgerald and Andrew Le Gear},
+  title = {Taxonomy of centralization in public blockchain systems: A systematic literature review},
+  journal = {Information Processing {\&}amp$\mathsemicolon$ Management}
+}
+
+@misc{Buterin2017, title={The meaning of decentralization}, url={https://medium.com/@VitalikButerin/the-meaning-of-decentralization-a0c92b76a274}, journal={Medium}, publisher={Medium}, author={Buterin, Vitalik}, year={2017}, month={Feb}} 
+
+@misc{Siddarth2022, title={The Web3 decentralization debate is focused on the wrong question}, url={https://www.wired.com/story/web3-blockchain-decentralization-governance/}, journal={Wired}, author={Siddarth, Divya and Allen, Danielle and Weyl, E. Glen}, year={2022}, month={May}} 
+
+@article{Shahsavari2022,
+  doi = {10.3389/fbloc.2022.812957},
+  url = {https://doi.org/10.3389/fbloc.2022.812957},
+  year = {2022},
+  month = feb,
+  publisher = {Frontiers Media {SA}},
+  volume = {5},
+  author = {Yahya Shahsavari and Kaiwen Zhang and Chamseddine Talhi},
+  title = {Toward Quantifying Decentralization of Blockchain Networks With Relay Nodes},
+  journal = {Frontiers in Blockchain}
+}
+
+ @misc{Srinivasan2017, title={Quantifying decentralization}, url={https://news.earn.com/quantifying-decentralization-e39db233c28e}, journal={Medium}, publisher={news.earn.com}, author={Srinivasan, Balaji S.}, year={2017}, month={Oct}} 
+
+@article{TOB2022,
+  url = {https://assets-global.website-files.com/5fd11235b3950c2c1a3b6df4/62af6c641a672b3329b9a480_Unintended_Centralities_in_Distributed_Ledgers.pdf},
+  year = {2022},
+  publisher = {Trail of Bits},
+  month = June,
+  author = {Evan Sultanik and Alexander Remie and Felipe Manzano and Trent Brunson and Sam Moelius and Eric Kilmer and Mike Myers and Talley Amir and Sonya Schriner},
+  title = {Are Blockchains Decentralized? Unintended Centralities in Distributed Ledgers}
+}
+
+@article{Rossiter2021,
+  doi = {10.1111/ajps.12653},
+  url = {https://doi.org/10.1111/ajps.12653},
+  year = {2021},
+  month = sep,
   publisher = {Wiley},
-  timestamp = {2016-07-12T19:25:30.000+0200},
-  title = {The organization of behavior: {A} neuropsychological
-                 theory},
-  username = {mhwombat},
-  year = 1949
+  volume = {66},
+  number = {2},
+  pages = {337--351},
+  author = {Erin L. Rossiter},
+  title = {Measuring Agenda Setting in Interactive Political Communication},
+  journal = {American Journal of Political Science}
 }
-
-
-
-
-@Article{kirby17,
-author={Kirby, Simon},
-title={Culture and biology in the origins of linguistic structure},
-journal={Psychonomic Bulletin {\&} Review},
-year={2017},
-month={Feb},
-day={01},
-volume={24},
-number={1},
-pages={118-137},
-abstract={Language is systematically structured at all levels of description, arguably setting it apart from all other instances of communication in nature. In this article, I survey work over the last 20 years that emphasises the contributions of individual learning, cultural transmission, and biological evolution to explaining the structural design features of language. These 3 complex adaptive systems exist in a network of interactions: individual learning biases shape the dynamics of cultural evolution; universal features of linguistic structure arise from this cultural process and form the ultimate linguistic phenotype; the nature of this phenotype affects the fitness landscape for the biological evolution of the language faculty; and in turn this determines individuals' learning bias. Using a combination of computational simulation, laboratory experiments, and comparison with real-world cases of language emergence, I show that linguistic structure emerges as a natural outcome of cultural evolution once certain minimal biological requirements are in place.},
-issn={1531-5320},
-doi={10.3758/s13423-016-1166-7},
-url={https://doi.org/10.3758/s13423-016-1166-7}
-}
-
-@article{kirby14,
-title = {Iterated learning and the evolution of language},
-journal = {Current Opinion in Neurobiology},
-volume = {28},
-pages = {108-114},
-year = {2014},
-note = {SI: Communication and language},
-issn = {0959-4388},
-doi = {https://doi.org/10.1016/j.conb.2014.07.014},
-url = {https://www.sciencedirect.com/science/article/pii/S0959438814001421},
-author = {Simon Kirby and Tom Griffiths and Kenny Smith},
-abstract = {Iterated learning describes the process whereby an individual learns their behaviour by exposure to another individual's behaviour, who themselves learnt it in the same way. It can be seen as a key mechanism of cultural evolution. We review various methods for understanding how behaviour is shaped by the iterated learning process: computational agent-based simulations; mathematical modelling; and laboratory experiments in humans and non-human animals. We show how this framework has been used to explain the origins of structure in language, and argue that cultural evolution must be considered alongside biological evolution in explanations of language origins.}
-}
-
-@article{pinker_bloom_1990, title={Natural language and natural selection}, volume={13}, DOI={10.1017/S0140525X00081061}, number={4}, journal={Behavioral and Brain Sciences}, publisher={Cambridge University Press}, author={Pinker, Steven and Bloom, Paul}, year={1990}, pages={707–727}}
-
-@article{sanda16,
-title = {Multilayer network of language: A unified framework for structural analysis of linguistic subsystems},
-journal = {Physica A: Statistical Mechanics and its Applications},
-volume = {457},
-pages = {117-128},
-year = {2016},
-issn = {0378-4371},
-doi = {https://doi.org/10.1016/j.physa.2016.03.082},
-url = {https://www.sciencedirect.com/science/article/pii/S0378437116300802},
-author = {Sanda Martinčić-Ipšić and Domagoj Margan and Ana Meštrović},
-keywords = {Complex networks, Multilayer complex networks, Language networks, Linguistic networks, Language subsystems}}}
-
-@article{tamariz16,
-title = {The cultural evolution of language},
-journal = {Current Opinion in Psychology},
-volume = {8},
-pages = {37-43},
-year = {2016},
-note = {Culture},
-issn = {2352-250X},
-doi = {https://doi.org/10.1016/j.copsyc.2015.09.003},
-url = {https://www.sciencedirect.com/science/article/pii/S2352250X15002225},
-author = {Monica Tamariz and Simon Kirby},
-abstract = {Human language has unusual structural properties that enable open-ended communication. In recent years, researchers have begun to appeal to cultural evolution to explain the emergence of these structural properties. A particularly fruitful approach to this kind of explanation has been the use of laboratory experiments. These typically involve participants learning and interacting using artificially constructed communication systems. By observing the evolution of these systems in the lab, researchers have been able to build a bridge between individual cognition and population-wide emergent structure. We review these advances, and show how cultural evolution has been used to explain the origins of structure in linguistic signals, and in the mapping between signals and meanings.}
-}
-
-@article{smith03,
-    author = {Andrew D. M. Smith},
-    title = {Intelligent meaning creation in a clumpy world helps communication},
-    journal = {ARTIFICIAL LIFE},
-    year = {2003},
-    volume = {9},
-    pages = {559--574}
-}
-
-
-@book{nativism,
-  title={What's within?: nativism reconsidered},
-  author={Cowie, Fiona and others},
-  year={1999},
-  publisher={Oxford University Press on Demand}
-}
-
-@InCollection{sep-meaning,
-	author       =	{Speaks, Jeff},
-	title        =	{{Theories of Meaning}},
-	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
-	editor       =	{Edward N. Zalta},
-	howpublished =	{\url{https://plato.stanford.edu/archives/spr2021/entries/meaning/}},
-	year         =	{2021},
-	edition      =	{Spring 2021},
-	publisher    =	{Metaphysics Research Lab, Stanford University}
-}
-
-
-@Article{dulizia20,
-author={D'Ulizia, Arianna
-and Ferri, Fernando
-and Grifoni, Patrizia},
-title={A Survey on Modeling Language Evolution in the New Millennium},
-journal={New Generation Computing},
-year={2020},
-month={Mar},
-day={01},
-volume={38},
-number={1},
-pages={97-124},
-abstract={Language is a complex evolving system and it is not a trivial task to model the dynamics of processes occurring during its evolution. Therefore, modeling language evolution has attracted the interest of several researchers giving rise to a lot of models in the literature of the last millennium. This work reviews the literature devoted to computationally represent the evolution of human language through formal models and provides an analysis of the bibliographic production and scientific impact of the surveyed language evolution models to give some conclusions about current trends and future perspectives of this research field. The survey provides also an overview of the strategies for validating and comparing the different language evolution models and how these techniques have been applied by the surveyed models.},
-issn={1882-7055},
-doi={10.1007/s00354-019-00079-7},
-url={https://doi.org/10.1007/s00354-019-00079-7}
-}
-
-
-@Article{mitchener07,
-author={Mitchener, W. Garrett},
-title={Game Dynamics with Learning and Evolution of Universal Grammar},
-journal={Bulletin of Mathematical Biology},
-year={2007},
-month={Apr},
-day={01},
-volume={69},
-number={3},
-pages={1093-1118},
-abstract={We investigate a model of language evolution, based on population game dynamics with learning. First, we examine the case of two genetic variants of universal grammar (UG), the heart of the human language faculty, assuming each admits two possible grammars. The dynamics are driven by a communication game. We prove using dynamical systems techniques that if the payoff matrix obeys certain constraints, then the two UGs are stable against invasion by each other, that is, they are evolutionarily stable. Then, we prove a similar theorem for an arbitrary number of disjoint UGs. In both theorems, the constraints are independent of the learning process. Intuitively, if a mutation in UG results in grammars that are incompatible with the established languages, then the mutation will die out because mutants will be unable to communicate and therefore unable to realize any potential benefit of the mutation. An example for which these theorems do not apply shows that compatible mutations may or may not be able to invade, depending on the population's history and the learning process. These results suggest that the genetic history of language is constrained by the need for compatibility and that mutations in the language faculty may have died out or taken over due more to historical accident than to any straightforward notion of relative fitness.},
-issn={1522-9602},
-doi={10.1007/s11538-006-9165-x},
-url={https://doi.org/10.1007/s11538-006-9165-x}
-}
-
-
-
